=== nautilus 2.1.4 ===

2002-12-09  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update

	* configure.in:
	Require eel 2.1.4, bump version to 2.1.4

2002-12-07  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c 
	(lay_down_icons_horizontal): Removed unnecessary assigment.
	Fixes #98543. Patch from Gediminas Paulauskas <menesis@delfi.lt>

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* libnautilus-private/nautilus-icon-factory.c:
	(icon_theme_changed_callback), (nautilus_icon_factory_clear):

	Clear the cache when the icon theme changes so we get the new icons.

2002-12-05  Glynn Foster  <glynn.foster@sun.com>

	* libnautilus/nautilus-clipboard-ui.xml: Add missing mnemonics.

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* src/nautilus-window.c: (nautilus_window_instance_init):

	Disconnect "icons_changed" handler from the icon factory when the
	window is closed.  Fixes #98038.

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_drag_received_cb):

	Fixed a silly double negation in an error string.  (Fixes #100376)

2002-12-04  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-tree-view-drag-dest.c:
	(tree_view_weak_notify), (nautilus_tree_view_drag_dest_dispose),
	(nautilus_tree_view_drag_dest_class_init),
	(nautilus_tree_view_drag_dest_new): Remove the scroll timeout
	when either the TreeView or the DragDest is destroyed. 

2002-12-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (create_properties_window):
	Don't use GTK_WIN_POS_MOUSE.

2002-12-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c (update_info_internal): 
	Removed unused code that should have been removed in the last 
	commit.

2002-12-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c: (rename_callback),
	(update_info_internal): Moved the display name invalidation 