@@ -5341,9 +5341,15 @@ nautilus_self_check_file (void)
 	EEL_CHECK_STRING_RESULT (nautilus_file_get_name (file_1), "home");
 	nautilus_file_unref (file_1);
 
+#if 0
+	/* ALEX: I removed this, because it was breaking distchecks.
+	 * It used to work, but when canonical uris changed from
+	 * foo: to foo:/// it broke. I don't expect it to matter
+	 * in real life */
 	file_1 = nautilus_file_get (":");
 	EEL_CHECK_STRING_RESULT (nautilus_file_get_name (file_1), ":");
 	nautilus_file_unref (file_1);
+#endif
 
 	file_1 = nautilus_file_get ("eazel:");
 	EEL_CHECK_STRING_RESULT (nautilus_file_get_name (file_1), "eazel");
