@@ -1,3 +1,8 @@
+2002-12-09  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c (nautilus_self_check_file):
+	Fix test
+
 === nautilus 2.1.4 ===
 
 2002-12-09  Alexander Larsson  <alexl@redhat.com>
